ajout linktree et linkedin

--- a/css/main.css
+++ b/css/main.css
@@ -1113,6 +1113,10 @@ footer .logo_ls img {
     margin-bottom: 10px;
 }
 
+.contact .mail {
+    margin-bottom: 10px;
+}
+
 .droite_footer .logos {
     margin-top: 20px;
 }
